--- a/zero-knowledge/assets/wasm/zk_styles.css
+++ b/zero-knowledge/assets/wasm/zk_styles.css
@@ -54,7 +54,7 @@ body {
 
   #progress {
     height: 20px;
-    width: 300px;
+    width: 90%;
   }
 
   #controls {
@@ -128,4 +128,8 @@ body {
 	opacity: 0.4;
 	position: fixed;
 	width: 100%;
+ }
+ 
+ #content{
+	padding-top:10px
  }
